--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -19,6 +19,11 @@ body{
   padding-left: 20px;
   border-bottom: 0px solid #ddd;
 }
+.logoutButton
+{
+  font-family: 'Muli', serif;
+  font-weight: bold;
+}
 
 
 
@@ -26,8 +31,6 @@ body{
     #name, #logoutText{
       display: none;
     }
-
-
 }
 
 
