--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -21,7 +21,7 @@ body{
   position: absolute;
   right: 50px;
   top: 100px;
-  background-color: #555;
+  background-color: #160E64;
   border-radius: 8px;
   padding: 10px;
   opacity: 0.9;
@@ -838,6 +838,7 @@ background-color: #e2f4c7 !important;
     }
     #legend
     {
+      top: 60px!important;
       font-size: 20px;
       padding-bottom: 44px;
       position: relative;
