--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -533,7 +533,7 @@ table{
     padding-top: 15px;
     padding-left: 5px;
     padding-right: 5px;
-    padding-bottom: 20px;
+    padding-bottom: 15px;
     color : #fc913a;
 }
 
@@ -597,7 +597,7 @@ table{
     display: inline-block;
     margin: 0 10px;
     position: relative;
-    min-height: 303.633px;
+    min-height: 342px;
     vertical-align: top;
 }
 .box Image {
@@ -621,8 +621,8 @@ table{
 }
 
 .box p {
-    margin-left: 20px;
-    font-size: 22px
+    font-size: 22px;
+    margin: 3px;
 }
 .box #counter
 {
