--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -26,6 +26,19 @@ body{
   border-radius: 3px;
   padding-left: 0px;
 }
+
+.subTitlePage
+{
+  width: 100vw!important;
+  height: 40px;
+  font-size: 25px;
+  background-color: #e2f4c7;
+  color: #ff4e50;
+  text-align: center;
+  border-radius: 3px;
+  margin-top: -10px;
+  padding-top: 5px;
+}
 #legend
 {
   font-family: 'Muli', serif;
@@ -469,10 +482,13 @@ table{
 {
   background-color: #f9d62e;
   opacity: 0.7;
-  margin: 10px;
+  border-radius: 2%;
   margin-top: 25px;
-  padding: 7px;
-  border-radius: 8%;
+}
+
+.react-cntdwn-timer
+{
+  margin: 3px;
 }
 
 
@@ -517,11 +533,6 @@ table{
 }
 
 
-.bodyNew
-{
-  background: white;
-  margin-top: 20px;
-}
 
 .body h1 {
   padding-top: 15px;
@@ -921,12 +932,30 @@ background-color: #e2f4c7 !important;
     .titlePage
     {
       width: 100vw!important;
-      height: 80px;
-      font-size: 25px;
+      height: 65px;
+      font-size: 31px;
       background-color: #e2f4c7;
       text-align: center;
       border-radius: 3px;
       padding-left: 0px;
+      vertical-align: middle;
+    }
+
+    #summaryTitle
+    {
+      height: 95px;
+    }
+
+    .subTitlePage
+    {
+      font-size: 23px;
+      padding-bottom: 52px;
+    }
+
+
+    .react-cntdwn-timer
+    {
+      margin: 3px;
     }
 
 }
