--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -480,7 +480,7 @@ table{
 
 #mtimer
 {
-  background-color: #f9d62e;
+  background-color: #eae374;
   opacity: 0.7;
   border-radius: 2%;
   margin-top: 25px;
