--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -962,7 +962,13 @@ background-color: #e2f4c7 !important;
     {
         background-color:#6666FF;
         opacity: 0.9;
-        width: 300px;
+        width: 350px;
+        font-size: 30px;
+        margin: 2px;
+        margin-top: 18px;
+        vertical-align: middle;
+        border: 4px solid;
+
     }
 
     .body h1
@@ -1005,6 +1011,9 @@ background-color: #e2f4c7 !important;
     {
       margin: 3px;
     }
+
+
+
 
 }
 
