--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1589,7 +1589,16 @@ option {
     border-left: 3px solid #f9d62e !important;
     border-right: 3px solid #f9d62e !important;
     border-top: 3px solid #f9d62e !important;
+  }
 
+  #deleteMinus
+  {
+    color: #ff4e50;
+    font-size: 65px;
+    font-weight: bold;
+    position: absolute;
+    right: 22px;
+    top: 4px;
   }
 
 
