[fix]: use different font size in timer

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -489,6 +489,7 @@ table{
 .react-cntdwn-timer
 {
   margin: 3px;
+  font-size: 22px;
 }
 
 
@@ -1013,6 +1014,7 @@ background-color: #e2f4c7 !important;
     {
       margin: 3px;
     }
+
 
 
 
